# Bernie

./: .gitignore  .gitignore.swp  CMakeLists.txt  LICENSE  README.md
Bernie/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  resources.qrc
Bernie/Core/: EncDec_File.cpp  EncDec_File.h  RBBSTree.cpp  RBBSTree.h  RBBSTree12.cpp  RBBSTree12.h  RBBSTree2.cpp  RBBSTree2.h
Bernie/Models/: Account.cpp  Account.h  Contact.cpp  Contact.h  Contacts.cpp  Contacts.h  CreditCard.cpp  CreditCard.h  CryptoWallet.cpp  CryptoWallet.h  Date.cpp  Date.h  Note.cpp  Note.h  RBBSTree.h  SerializableObject.cpp  SerializableObject.h  SerializableObjectsEnum.h  Telephone.cpp  Telephone.h  Vault.cpp  Vault.h  date.cpp  date.h
Bernie/Savings/Databases/: 24SerializableObjectTest.txt  ciao.txt  pass_ciao.txt  prova1.txt  prova3_correct.txt  prova4_fail.txt  prova5.txt
Bernie/Savings/Manual/: Manual.txt
Bernie/Savings/StyleSheets/: normalStyleSheet.qss
Bernie/Testing/: CMakeCache.txt  CMakeLists.txt  EncDec_FileTestingFunctions.cpp  EncDec_FileTestingFunctions.h  Makefile  VaultTestingFunctions.h  cmake_install.cmake  testing.cpp  testingSerialization.cpp
Bernie/Views/: CreateDBPage.cpp  CreateDBPage.h  DBSelectedPage.cpp  DBSelectedToRemovePage.cpp  DBSelectedToRemovePage.h  HomePage.cpp  HomePage.h  LandingPage.cpp  LandingPage.h  MainWindow.cpp  MainWindow.h  SelectDBPage.cpp  SelectDBPage.h  SelectDBToRemove.cpp  TypeSelectionPage.cpp  TypeSelectionPage.h
Bernie/Views/Components/: DateComponent.cpp  TypeSelectionButton.h
Bernie/Views/SerializableObjectPages/: AccountPage.cpp  AccountPage.h  ContactPage.cpp  ContactPage.h  CreditCardPage.cpp  CreditCardPage.h  CryptoWalletPage.cpp  CryptoWalletPage.h  NotePage.cpp  NotePage.h  PagesInterface.cpp  PagesInterface.h
Bernie/Views/Visitors/: ListCardItem.cpp  SerializableObjectsVisitor.cpp  SerializableObjectsVisitor.h  VisitorListItem.cpp  VisitorListItem.h  VisitorManageItem.cpp  VisitorManageItem.h
Docs/: Base_UML.excalidraw  Carraro_Riccardo_Relazione.docx  Relazione_Toniolo_Riccardo.docx  Sketch_UI.excalidraw  Toniolo_Riccardo_Relazione.docx  ~$lazione_Toniolo_Riccardo.docx
Testing/: Bernie  CMakeLists.txt  EncDec_FileTestingFunctions.cpp  EncDec_FileTestingFunctions.h  SerializationTestingFunctions.cpp  TreeTestingFunctions.cpp  TreeTestingFunctions.h  VaultTestingFunctions.cpp  VaultTestingFunctions.h  testing.cpp
src/: Bernie.pro  CMakeLists.txt  resources.qrc
src/Core/: EncDec_File.h  RBBSTree.cpp  RBBSTree.h
src/Models/: Account.cpp  Account.h  Contact.cpp  CryptoWallet.cpp  Date.cpp  Date.h  SerializableObject.cpp  SerializableObject.h  Telephone.cpp  Vault.cpp  Vault.h
src/Savings/Databases/: prova1_correct.txt  prova2_fail.txt
src/Savings/Manual/: Manual.txt
src/Testing/: Bernie.pro  CMakeCache.txt  CMakeLists.txt  EncDec_FileTestingFunctions.h  Makefile  SerializationTestingFunctions.cpp  SerializationTestingFunctions.h  TreeTestingFunctions.cpp  TreeTestingFunctions.h  VaultTestingFunctions.cpp  VaultTestingFunctions.h  cmake_install.cmake  testing.cpp
src/Testing/Bernie.app/Contents/: Info.plist
src/Testing/Bernie.app/Contents/MacOS/: Bernie
src/Testing/Databases4Testing/: 24SerializableObjectTest.txt  prova3.txt
src/Views/: CreateDBPage.cpp  CreateDBPage.h  DBSelectedPage.h  HomePage.cpp  HomePage.h  LandingPage.cpp  MainWindow.cpp  MainWindow.h  SelectDBPage.cpp  SelectDBPage.h  SelectDBToRemove.h  TypeSelectionPage.cpp
src/Views/Components/: DateComponent.cpp  DateComponent.h  MenuButton.cpp  MenuButton.h  TypeSelectionButton.cpp  TypeSelectionButton.h
src/Views/SerializableObjectPages/: AccountPage.cpp  AccountPage.h  ContactPage.cpp  CreditCardPage.cpp  CryptoWalletPage.cpp  NotePage.cpp  PagesInterface.cpp
src/Views/Visitors/: ListCardItem.cpp  ListCardItem.h  SerializableObjectsVisitor.cpp  VisitorListItem.cpp  VisitorManageItem.cpp  VisitorManageItem.h
